--- a/src/main/resources/templates/Agent/CustomerByAgent.html
+++ b/src/main/resources/templates/Agent/CustomerByAgent.html
@@ -15,18 +15,18 @@
 <link
 	href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|"
 	rel="stylesheet" type="text/css">
-<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="fonts/lineo-icon/style.css" rel="stylesheet" type="text/css">
+<link href="/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="/fonts/lineo-icon/style.css" rel="stylesheet" type="text/css">
 
 <!-- Loading main css file -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 
-<style type="text/css">
+<!-- <style type="text/css">
 li:hover{
 background-color: blue;
 border-radius: 30px;
 text-align: center;
-}
+} -->
 
 </style>
 </head>
@@ -36,7 +36,7 @@ text-align: center;
 			<div class="top-header" style="background-color: activecaption;">
 
 				<div class="container">
-					<a href="#" id="branding"> <img src="images/logo.png"
+					<a href="#" id="branding"> <img src="/images/logo.png"
 						alt="Company Name" class="logo">
 						<div class="logo-text" style="margin-top: 10px">
 							<h1 class="site-title" style="font-size: 29px;">Smart Life</h1>
@@ -47,11 +47,11 @@ text-align: center;
 					
 					<div class="right-section pull-right"
 						style="margin-top: -10px; margin-left: 40px">
-						<h2 style="color: #0056B3">Agent panel</h2>
+						<h2 style="color: #0056B3">Agent panel<br> Ag_No: <span th:text="${id}"></span></h2>
 						<!-- <button class="btn btn-danger" ><a href="logout" class="text-white">Logout</a></button> -->
 
 
-						<form method="get" action="logou"
+						<form method="get" action="/"
 							onsubmit="return confirm('Are you sure?');">
 							<button class="btn btn-danger" style="margin-left: 20px" type="submit" value='log'>Logout</button>
 						</form>
@@ -60,7 +60,7 @@ text-align: center;
 					<div class="right-section pull-right" style="margin-top: 25px">
 						<a href="#" class="phone"
 							style="font-size: 15px; font-weight: bold"><img
-							src="images/icon-phone.png" class="icon">+00801626-609636</a> <br>
+							src="/images/icon-phone.png" class="icon">+00801626-609636</a> <br>
 						<!--<form action="#" class="search-form">
 								<input type="text" placeholder="Search...">
 								<button type="submit"><img src="images/icon-search.png" alt=""></button>
@@ -79,6 +79,7 @@ text-align: center;
 			</div>
 			<!-- .top-header -->
 
+<!-- <p>this<span th:text="${id}"></span></p> -->
 			<!-- 2nd-header -->
 			<nav class="navbar navbar-expand-lg navbar-light bg-danger">
 
@@ -92,12 +93,12 @@ text-align: center;
 					id="navbarNavDropdown">
 					<ul class="navbar-nav" style="margin-left: 30px">
 						
-						<li class="nav-item" style="margin-left: 40px"><a class="nav-link" href="#"
-							style="color: white">Check Accounts</a></li>	
-						<li class="nav-item" style="margin-left: 40px"><a class="nav-link" href="#"
+						<li class="nav-item" style="margin-left: 40px"><a class="btn btn-danger" style="color: white;font-weight: bold;font-size: 20px" id="go-back" th:href="@{/agent/back}">Go back!</a>
+							</li>	
+<!-- 						<li class="nav-item" style="margin-left: 40px"><a class="nav-link" th:href="addCustomer"
 							style="color: white">Add Customer</a></li>
-						<li class="nav-item" style="margin-left: 40px"><a class="nav-link" href="#"
-							style="color: white">Customer Details</a></li>
+						<li class="nav-item" style="margin-left: 40px"><a class="nav-link" th:href="@{/myCustomers/{id}(id=${id})}"
+							style="color: white">Customer Details</a></li> -->
 					<!-- 	<li class="nav-item" style="margin-left: 40px"><a class="nav-link" href="customerdetails"
 							style="color: white">Customer Details</a></li> -->
 
@@ -108,6 +109,87 @@ text-align: center;
 	</div>
 
 	<!-- .site-header -->
+
+
+
+
+
+	<!-- Custmer Details -->
+	<div class=""
+		style="margin-top: 20px; color: black; font-weight: bold">
+		<div class="row text-center">
+			
+			<div class="col-md-12 ">
+				<h1 class=" text-center" style="color: purple;">
+					<u><span th:text="${terget}"></span></u>
+				</h1>
+
+				<!-- customer search form -->
+			<!-- 	<nav class="navbar navbar-light bg-light col-md-5 "
+					style="padding-left: 100px">
+					<form name="mform" class="form-inline" action="searchCustomer"
+						method="get">
+						<input class="form-control mr-sm-2 " type="search" name="sarc"
+							placeholder="Search" aria-label="Search">
+
+
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+							<i class="fa fa-search-plus text-info" style="font-size: 25px"></i>
+						</button>
+
+					</form>
+				</nav> -->
+				<!-- customer search form -->
+
+
+				<table border="1" class="table table-striped table-responsive-md"
+					style="max-width: 98%; overflow: auto; margin-left: 15px">
+					<thead>
+						<tr
+							style="background-color: black; color: yellow; font-size: 16px">
+							<th>Id</th>
+							<th>Name</th>
+							<th>Address</th>
+							<th>Mobile_no.</th>
+							<th>Email</th>
+							<th>Gender</th>
+							<th>Policy</th>
+							<th>Duration</th>
+							<th>Prm.Metd</th>
+							<th>Pyed_Prm</th>
+							<th>Account</th>
+							<th>PolcyAmount</th>
+							<th>Position</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="cust :${mycustomr}"
+							th:class="${cust.position}=='pending'? bg-danger: bg-white">
+							<td th:text="${cust.custid}"></td>
+							<td th:text="${cust.custname}"></td>
+							<td th:text="${cust.custaddress}"></td>
+							<td th:text="${cust.custnumber}"></td>
+							<td th:text="${cust.custemail}"></td>
+							<td th:text="${cust.custgender}"></td>
+							<td th:text="${cust.policytype}"></td>
+							<td th:text="${cust.duration}"></td>
+							<td th:text="${cust.prim_method}"></td>
+							<td th:text="${cust.payed_prim}"></td>
+							<td th:text="${cust.account}"></td>
+							<td th:text="${cust.policyAmount}"></td>
+							<td th:text="${cust.position}"></td>
+
+						</tr>
+					</tbody>
+
+				</table>
+			</div>
+
+		</div>
+	</div>
+	<!-- Custmer Details -->
+
+
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
