--- a/src/main/resources/templates/products/Products.html
+++ b/src/main/resources/templates/products/Products.html
@@ -90,7 +90,9 @@
 				<!-- .container -->
 			</div>
 			<!-- .top-header -->
-			<!-- .top-header -->
+			
+			
+			
 
 			<!-- 2nd-header -->
 			<nav class="navbar navbar-expand-lg navbar-light bg-danger">
@@ -161,7 +163,13 @@
 
 				</div>
 			</nav>
+			<!-- 2nd header -->
+			
 		</header>
+		<!-- header compleate -->
+		
+		
+		
 	</div>
 	<div class="container">
 		<div class="row">
@@ -190,21 +198,25 @@
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Insurance
 									amount</th>
-								<td colspan="4">Minimum 30000 tk.</td>
+								<td colspan="4">Minimum 50000 tk.</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 2000 tk.(yearly)</td>
+								<td colspan="4">As per policy</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
 								<td colspan="4">8, 10, 12, 15</td>
 							</tr>
+							
 							<tr>
 								<th colspan="2" Style="font-size: 20px; color: blue">Starting
 									age</th>
 								<td colspan="4">Maximum 55 years old</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Maturity
 									age</th>
@@ -215,11 +227,13 @@
 									method</th>
 								<td colspan="4">Half yearly, Yearly</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
-								<td colspan="4">2 to 5 years 40%, 6 to 8 years 60%, 8 to 10
-									years 80 % and 10 to 12 years 98% profit</td>
+								<td colspan="4">8 to 9
+									years 50%, and 10 to 11 years 65%, 12 to 14 years 80%, and 15 to up years 95% profit</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
 									claim</th>
@@ -263,7 +277,7 @@
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 3500 tk.(yearly)</td>
+								<td colspan="4">As per Policy </td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
@@ -285,11 +299,18 @@
 								<td colspan="4">Half yearly, Yearly</td>
 							</tr>
 							<tr>
-								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
+								<th colspan="3" Style="font-size: 20px; color: blue">Health Claim</th>
 								<td colspan="4">If you are seriously ill before the
 									insurance expires, then the exact amount of many will be spent
 									on your recovery</td>
 							</tr>
+							
+							<tr>
+								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
+								<td colspan="4">After successfully Finished Policy, the policy holder get  8 to 9
+									years 50%, and 10 to 11 years 65%, 12 to 14 years 80%, and 15 to up years 95% profit</td>
+							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
 									claim</th>
@@ -322,6 +343,7 @@
 								<th colspan="4">Description</th>
 
 							</tr>
+							
 						</thead>
 						<tbody>
 							<tr>
@@ -331,11 +353,11 @@
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 3500 tk.(yearly)</td>
+								<td colspan="4">As per Policy</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
-								<td colspan="4">10, 12, 15</td>
+								<td colspan="4">8, 10, 12, 15</td>
 							</tr>
 							<tr>
 								<th colspan="2" Style="font-size: 20px; color: blue">Starting
@@ -354,11 +376,13 @@
 									method</th>
 								<td colspan="4">Half yearly, Yearly</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
-								<td colspan="4">2 to 5 years 25%, 6 to 8 years 50%, 8 to 10
-									years 75% and 10 to 12 years 98% profit</td>
+								<td colspan="4">After successfully Finished Policy, the policy holder get  8 to 9
+									years 50%, and 10 to 11 years 65%, 12 to 14 years 80%, and 15 to up years 95% profit</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
 									policyholder</th>
@@ -407,11 +431,11 @@
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 6120 tk.(yearly)</td>
+								<td colspan="4">As per Policy</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
-								<td colspan="4">10, 12, 15, 20</td>
+								<td colspan="4">8, 10, 12, 15,</td>
 							</tr>
 							<tr>
 								<th colspan="2" Style="font-size: 20px; color: blue">Starting
@@ -430,9 +454,10 @@
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
-								<td colspan="4">2 to 5 years 15%, 6 to 10 years 50%, 10 to
-									15 years 75% and 16 to 20 years 100% profit</td>
+								<td colspan="4">After successfully Finished Policy, the policy holder get  8 to 9
+									years 50%, and 10 to 11 years 65%, 12 to 14 years 80%, and 15 to up years 95% profit</td>
 							</tr>
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
 									policyholder</th>
@@ -440,7 +465,6 @@
 									the insurance, the sum assured is paid to the nominiee along
 									with the earned bonus.</td>
 							</tr>
-
 						</tbody>
 					</table>
 				</div>
@@ -470,11 +494,11 @@
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Insurance
 									amount</th>
-								<td colspan="4">Minimum 30000 tk.</td>
+								<td colspan="4">Minimum 50000 tk.</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 1750 tk.(yearly)</td>
+								<td colspan="4">As per Policy</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
@@ -502,6 +526,8 @@
 									remaining 50% will be able to enjoy the benefits for 10 years
 									or as long as you live.</td>
 							</tr>
+					
+							
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
 									policyholder</th>
@@ -539,15 +565,15 @@
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Insurance
 									amount</th>
-								<td colspan="4">Minimum 30000 tk.</td>
+								<td colspan="4">Minimum 50000 tk.</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 1750 tk.(yearly)</td>
+								<td colspan="4">As per Policy</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
-								<td colspan="4">10, 15, 20 years</td>
+								<td colspan="4">8, 10, 15, years</td>
 							</tr>
 							<tr>
 								<th colspan="2" Style="font-size: 20px; color: blue">Starting
@@ -567,9 +593,11 @@
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
-								<td colspan="4">If the premium payer and the child survives
-									till the maturity of the insurance, the child is paid with the
-									sum and 95% earned bonus.</td>
+								<td colspan="4">At Policy maturity, the Face Amount of the Policy plus Bonus(es) are paid.
+								 The money can be used to pay for his/her higher education.
+								  Or if he/she has already completed education,
+								   money may be very helpful to start his/her new career, 
+								   cover marriage expenses, or support other important events in life</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
@@ -610,15 +638,15 @@
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Insurance
 									amount</th>
-								<td colspan="4">Minimum 30000 tk.</td>
+								<td colspan="4">Minimum 50000 tk.</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Installment</th>
-								<td colspan="4">Minimum 1750 tk.(yearly)</td>
+								<td colspan="4">As per Policy</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Duration</th>
-								<td colspan="4">10, 15, 20 years</td>
+								<td colspan="4">8, 10, 15 years</td>
 							</tr>
 							<tr>
 								<th colspan="2" Style="font-size: 20px; color: blue">Starting
@@ -645,7 +673,7 @@
 								<th colspan="3" Style="font-size: 20px; color: blue">Profit</th>
 								<td colspan="4">If the premium payer and his wife survives
 									till the maturity of the insurance, the wife is paid with the
-									sum and 95% earned bonus.</td>
+									sum and earned bonus As per Policy Duration.</td>
 							</tr>
 							<tr>
 								<th colspan="3" Style="font-size: 20px; color: blue">Death
