--- a/src/main/resources/templates/Agent/agentLogin.html
+++ b/src/main/resources/templates/Agent/agentLogin.html
@@ -31,13 +31,19 @@
 		<div class=row>
 			<div class="col-md-6 offset-md-3 "
 				style="background-color: white; margin-top: 100px; opacity: 0.9">
-				<form th:action="@{/agentloged}" method="post" style="padding: 10px" >
+				<form action="#" th:action="@{/signin}" method="post" style="padding: 10px" >
 					<h1 class="text-center " style="padding-top: 10px">
-						<b>Agent Login <i class="fas fa-user-lock"></i></b>
+						<b>Login <i class="fas fa-user-lock"></i></b>
 					</h1>
+					<div th:if="${param.error}" class="alert alert-danger">
+					<h4 class="text-danger text-center">Invalid Name Or Password !</h4>
+					</div>
+					<div th:if="${param.logout}" class="alert alert-success">
+					<h4 class="text-success text-center" >You are Successfully Logout!</h4>
+					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Email address</label> <input
-							type="email" class="form-control" name="email"
+							type="email" class="form-control" name="username"
 							id="exampleInputEmail1" aria-describedby="emailHelp"
 							placeholder="Enter email"> <small id="emailHelp"
 							class="form-text text-muted"></small>
