--- a/src/main/resources/templates/logform.html
+++ b/src/main/resources/templates/logform.html
@@ -31,7 +31,7 @@
 		<div class=row>
 			<div class="col-md-6 offset-md-3 "
 				style="background-color: white; margin-top: 100px; opacity: 0.9">
-				<form th:action="@{/adminloged}" method="post" style="padding: 10px" >
+				<form th:action="@{/admin/adminloged}" method="post" style="padding: 10px" >
 					<h1 class="text-center " style="padding-top: 10px">
 						<b>Admin Login <i class="fas fa-user-lock"></i></b>
 					</h1>
