--- a/src/main/resources/templates/Agent/agentPanel.html
+++ b/src/main/resources/templates/Agent/agentPanel.html
@@ -122,7 +122,7 @@ text-align: center;
 
 
 
-<!-- Custmer Details -->
+<!-- Agent Details -->
 	<div class="" th:if="${terget!=null}"
 		style="margin-top: 20px; color: black; font-weight: bold">
 		<div class="row text-center">
@@ -189,7 +189,7 @@ text-align: center;
 
 		</div>
 	</div>
-	<!-- Custmer Details -->
+	<!-- AgentDetails -->
 
 
 
